// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: eficiente, SOC 60 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 20.2,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 18.8,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 60,
      "label": "Ruta A",
      "minSoc": 20.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 158,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 20.7,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 18.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 60,
      "label": "Ruta B",
      "minSoc": 20.7,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 157,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 18.8,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 19.4,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 60,
      "label": "Ruta C",
      "minSoc": 18.8,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 173,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 15.3,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 21,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 60,
      "label": "Ruta D",
      "minSoc": 15.3,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 178,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: menos paradas, SOC 90 %, sport 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 47.7,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 19.9,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 47.7,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 131,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 48.2,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 19.7,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 48.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 131,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 46,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 20.7,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 46,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 144,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 43,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 22.2,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 43,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 149,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: modo más rápido, SOC 35 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 19.1,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 20.1,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 19.1,
      "noTolls": undefined,
      "stops": [
        "s20 32.7→59.4 18 min",
      ],
      "totalMinutes": 168,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 17.7,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 19.1,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 17.7,
      "noTolls": undefined,
      "stops": [
        "s20 34.1→57.4 16 min",
      ],
      "totalMinutes": 160,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -7.1,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 19.8,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 35,
      "label": "Ruta C",
      "minSoc": -7.1,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -10.6,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 21.5,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 35,
      "label": "Ruta D",
      "minSoc": -10.6,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 161,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > energía v2: más segura, SOC 15 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 30.1,
      "departureCharge": 8,
      "distanceKm": 129.1,
      "energyKwh": 20.1,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 23,
      "label": "Ruta A",
      "minSoc": 20.7,
      "noTolls": undefined,
      "stops": [
        "s20 20.7→70.4 28 min",
      ],
      "totalMinutes": 178,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 28.7,
      "departureCharge": 6,
      "distanceKm": 128.7,
      "energyKwh": 19.1,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 21,
      "label": "Ruta B",
      "minSoc": 20.1,
      "noTolls": undefined,
      "stops": [
        "s20 20.1→68.4 28 min",
      ],
      "totalMinutes": 171,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -27.1,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 19.8,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 15,
      "label": "Ruta C",
      "minSoc": -27.1,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -30.6,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 21.5,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 15,
      "label": "Ruta D",
      "minSoc": -30.6,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 161,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > menos paradas, SOC 90 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 42.9,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 22.2,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 42.9,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 43.4,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 22,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 43.4,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 40.5,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 23.3,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 40.5,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 146,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 37.1,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 24.9,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 37.1,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 151,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > menos paradas, SOC 90 % 2`] = `"6df9322bf401d1b7"`;

exports[`caracterización del pipeline con proveedores sintéticos > modo más rápido, SOC 35 %: resumen y huella del resultado completo 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 18.9,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 21.4,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 18.9,
      "noTolls": undefined,
      "stops": [
        "s20 32.5→61.9 19 min",
      ],
      "totalMinutes": 168,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 17.5,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 17.5,
      "noTolls": undefined,
      "stops": [
        "s20 33.8→59.9 17 min",
      ],
      "totalMinutes": 160,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -10.5,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 21.4,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 35,
      "label": "Ruta C",
      "minSoc": -10.5,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -14.2,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 23.2,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 35,
      "label": "Ruta D",
      "minSoc": -14.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > modo más rápido, SOC 35 %: resumen y huella del resultado completo 2`] = `"c26948596452d071"`;

exports[`caracterización del pipeline con proveedores sintéticos > más segura, SOC 15 %, margen conservador (pide carga antes de salir) 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 29.9,
      "departureCharge": 8,
      "distanceKm": 129.1,
      "energyKwh": 21.4,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 23,
      "label": "Ruta A",
      "minSoc": 20.5,
      "noTolls": undefined,
      "stops": [
        "s20 20.5→72.9 30 min",
      ],
      "totalMinutes": 179,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 28.5,
      "departureCharge": 7,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 22,
      "label": "Ruta B",
      "minSoc": 20.8,
      "noTolls": undefined,
      "stops": [
        "s20 20.8→70.9 29 min",
      ],
      "totalMinutes": 172,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": -30.5,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 21.4,
      "feasible": false,
      "id": "route-2",
      "initialSoc": 15,
      "label": "Ruta C",
      "minSoc": -30.5,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": -34.2,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 23.2,
      "feasible": false,
      "id": "route-3",
      "initialSoc": 15,
      "label": "Ruta D",
      "minSoc": -34.2,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > más segura, SOC 15 %, margen conservador (pide carga antes de salir) 2`] = `"e651510f0d97c236"`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: menos paradas, SOC 90 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 42.9,
      "departureCharge": undefined,
      "distanceKm": 129.1,
      "energyKwh": 22.2,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 90,
      "label": "Ruta A",
      "minSoc": 42.9,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 43.4,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 22,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 90,
      "label": "Ruta B",
      "minSoc": 43.4,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 133,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 40.5,
      "departureCharge": undefined,
      "distanceKm": 144,
      "energyKwh": 23.3,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 90,
      "label": "Ruta C",
      "minSoc": 40.5,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 146,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 37.1,
      "departureCharge": undefined,
      "distanceKm": 149.4,
      "energyKwh": 24.9,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 90,
      "label": "Ruta D",
      "minSoc": 37.1,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 151,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: modo más rápido, SOC 35 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 15.6,
      "departureCharge": undefined,
      "distanceKm": 130.6,
      "energyKwh": 20.6,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 35,
      "label": "Ruta A",
      "minSoc": 15.6,
      "noTolls": undefined,
      "stops": [
        "s20 33.7→58 16 min",
      ],
      "totalMinutes": 159,
      "verification": "verified en 1",
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 15.6,
      "departureCharge": undefined,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 35,
      "label": "Ruta B",
      "minSoc": 15.6,
      "noTolls": undefined,
      "stops": [
        "s20 33.8→58 16 min",
      ],
      "totalMinutes": 160,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 15.5,
      "departureCharge": 26,
      "distanceKm": 144,
      "energyKwh": 21.4,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 61,
      "label": "Ruta C",
      "minSoc": 15.5,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
    {
      "arrivalSoc": 15.8,
      "departureCharge": 30,
      "distanceKm": 149.4,
      "energyKwh": 23.2,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 65,
      "label": "Ruta D",
      "minSoc": 15.8,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;

exports[`caracterización del pipeline con proveedores sintéticos > planificador v2: más segura, SOC 15 % 1`] = `
{
  "chargers": [
    "s20",
    "s35",
    "s45",
    "s60",
    "s72",
  ],
  "engine": [
    "mapbox",
    "mapbox",
    "mapbox",
    "mapbox",
  ],
  "plans": [
    {
      "arrivalSoc": 21.6,
      "departureCharge": 7,
      "distanceKm": 130.6,
      "energyKwh": 20.6,
      "feasible": true,
      "id": "route-0",
      "initialSoc": 22,
      "label": "Ruta A",
      "minSoc": 20.7,
      "noTolls": undefined,
      "stops": [
        "s20 20.7→64 25 min",
      ],
      "totalMinutes": 168,
      "verification": "verified en 1",
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 21.6,
      "departureCharge": 7,
      "distanceKm": 128.7,
      "energyKwh": 20.5,
      "feasible": true,
      "id": "route-1",
      "initialSoc": 22,
      "label": "Ruta B",
      "minSoc": 20.8,
      "noTolls": undefined,
      "stops": [
        "s20 20.8→64 25 min",
      ],
      "totalMinutes": 169,
      "via": "Ruta 45A, Ruta 62",
    },
    {
      "arrivalSoc": 20.8,
      "departureCharge": 55,
      "distanceKm": 149.4,
      "energyKwh": 23.2,
      "feasible": true,
      "id": "route-3",
      "initialSoc": 70,
      "label": "Ruta D",
      "minSoc": 20.8,
      "noTolls": undefined,
      "stops": [],
      "totalMinutes": 160,
      "via": "Ruta 66",
    },
    {
      "arrivalSoc": 20.5,
      "departureCharge": 51,
      "distanceKm": 144,
      "energyKwh": 21.4,
      "feasible": true,
      "id": "route-2",
      "initialSoc": 66,
      "label": "Ruta C",
      "minSoc": 20.5,
      "noTolls": true,
      "stops": [],
      "totalMinutes": 155,
      "via": "Ruta 45A",
    },
  ],
  "selectedId": "route-0",
  "warnings": [],
  "weather": {
    "elevationM": 1200,
    "source": "Open-Meteo",
    "temperatureC": 22,
    "windDirDeg": 200,
    "windKmh": 12,
  },
}
`;
